--- a/css/responsive.css
+++ b/css/responsive.css
@@ -163,42 +163,11 @@
     }
 
     /* / OBSERVATIONS / */
-    /* BACKGROUND-IMG */
+    /* IMG */
 
     .observations .bg {
-        min-width: 360px;
         max-width: 415px;
         height: 100% !important;
-    }
-
-    .ce .observations .bg {
-        background-position: 50% 31%, 50% 82%;
-    }
-
-    .mp .observations .bg {
-        background-position: 50% 18%, 50% 40%, 50% 87.6%, 50% 66%;
-    }
-
-    .p .observations .bg {
-        background-position: 50% 80%, 50% 26%;
-    }
-
-    .a .observations .bg {
-        background-position: 50% 11%, 50% 34.5%, 50% 53%, 50% 71%, 50% 91%;
-    }
-
-    .cc .observations .bg {
-        background-position: 50% 10.5%, 50% 28%, 50% 46.3%, 50% 64%, 50% 100%, 50% 82%;
-        padding-bottom: 240px;
-    }
-
-    .e .observations .bg {
-        background-position: 50% 20%, 50% 55%, 50% 84%;
-    }
-
-    .fl .observations .bg {
-        background-position: 50% 36%, 50% 0%, 50% 70%, 50% 100%;
-        padding: 240px 0;
     }
 
     /* POST-ITS */
@@ -210,19 +179,19 @@
         margin: 0 auto;
     }
 
-    .post-it {
+    /* .post-it {
         margin-top: 220px;
-    }
+    } */
 
-    .post-it.top {
+    /* .post-it.top {
         margin-top: 0px;
-    }
+    } */
 
-    .post-it.superieur {
+    /* .post-it.superieur {
         margin-top: 380px;
-    }
+    } */
 
-    .post-it.ouvert,
+    /* .post-it.ouvert,
     .post-it.semi-pro,
     .post-it.collectif,
     .post-its .lille,
@@ -230,11 +199,11 @@
     .post-its .paris,
     .post-its .exception {
         margin-top: 195px;
-    }
+    } */
 
-    .post-its .iterations {
+    /* .post-its .iterations {
         margin-top: 40px;
-    }
+    } */
 
     /* ABOUT */
     .side,
@@ -304,33 +273,18 @@
     /* /// 7 MECANIQUES /// */
 
     /* / OBSERVATIONS / */
-    .mp .observations .bg {
-        background-position: -10% 0%, 110% 34%, 90% 100%, 10% 70%;
+    .observations .bg img.cohesion,
+    .observations .bg img.dunkerque {
+        display: none;
     }
 
-    .p .observations .bg {
-        height: 900px;
-    }
-
-    .a .observations .bg {
-        background-position: 0% 0%, 120% 20%, 80% 45%, 7% 70%, 100% 100%;
-    }
-
-    .cc .observations .bg {
-        background-position: 0% 2%, 100% 18%, -7% 55%, 23% 38%, 90% 74%, 0% 94%;
-    }
-
-    .e .observations .bg {
-        background-position: 0% 0%, 110% 45%, 17% 90%;
-    }
-
-    .fl .observations .bg {
-        background-position: 0% 5%, 110% 30%, 62% 100%, 10% 70%;
+    .mp .post-it {
+        transform: translate(0px, 250px);
     }
 
     /* POST-ITS */
     .post-it {
-        min-height: 100%;
+        min-height: 0px;
     }
 
     /* CE */
@@ -514,7 +468,13 @@
     /* BACKGROUND IMG */
 
     .observations .bg {
-        background-size: 100% !important;
+        height: 100% !important;
+    }
+
+    .observations .bg img {
+        position: unset;
+        width: 100% !important;
+        margin: -5px auto;
     }
 
     /* POST-IT */
@@ -618,43 +578,138 @@
     /* / OBSERVATIONS / */
     /* BACKGROUND_IMG */
 
-    .observations .bg {
-        background-size: 65%;
+    .observations .bg img,
+    .p .observations .bg img,
+    .a .observations .bg img {
+        width: 65%;
     }
 
+    /* CE */
     .ce .observations .bg {
-        background-position: -20% 2%, 110% 84%;
         height: 900px;
     }
 
+    .observations .bg img.inter {
+        left: -7%;
+    }
+
+    .observations .bg img.voyage {
+        top: 420px;
+    }
+
+    /* MP */
     .mp .observations .bg {
-        background-position: -10% 3%, 99% 53%, 120% 102%, -20% 69%;
         height: 1500px;
     }
 
+    .observations .bg img.design {
+        top: 30px;
+    }
+
+    .observations .bg img.coaching {
+        top: 660px;
+    }
+
+    .observations .bg img.equipe {
+        top: 1190px;
+        right: -7%;
+    }
+
+    .observations .bg img.ethnographie {
+        left: -7%;
+    }
+
+    /* P */
     .p .observations .bg {
         height: 760px;
     }
 
+    .observations .bg img.rythmer {
+        top: 420px;
+        right: -5%;
+    }
+
+    /* A */
     .a .observations .bg {
-        background-position: -2% 2%, 110% 33%, 70% 48%, 10% 69%, 100% 100%;
-        background-size: 45%, 65%, 65%, 65%, 65%;
         height: 1600px;
     }
 
+    .observations .bg img.cohesion {
+        width: 45%;
+    }
+
+    .observations .bg img.immersion {
+        top: 410px;
+    }
+
+    .observations .bg img.ideation {
+        top: 570px;
+    }
+
+    .observations .bg img.embassadeurs {
+        top: 890px;
+        left: 1%;
+    }
+
+    .observations .bg img.creation {
+        top: 1190px;
+    }
+
+    /* CC */
     .cc .observations .bg {
-        background-position: -20% 1%, 110% 20%, -21% 54%, 32% 40%, 100% 84%, -9% 98%;
         height: 2200px;
     }
 
+    .observations .bg img.scolaire {
+        top: 750px;
+    }
+
+    .observations .bg img.megotiers {
+        top: 1050px;
+        left: -7%;
+    }
+
+    .observations .bg img.bois {
+        top: 1600px;
+        right: 0%;
+    }
+
+    .observations .bg img.arbres {
+        top: 1810px;
+        left: -4%;
+        z-index: 0;
+    }
+
+    /* E */
     .e .observations .bg {
-        background-position: 0% 0%, 130% 47%, -8% 100%;
         height: 1120px;
     }
 
+    .observations .bg img.mulhouse {
+        top: 330px;
+    }
+
+    .observations .bg img.e-paris {
+        top: 790px;
+        left: -2%;
+    }
+
+    /* FL */
     .fl .observations .bg {
-        background-position: 0% 0%, 121% 43%, 62% 100%, -10% 80%;
         height: 1500px;
+    }
+
+    .observations .bg img.metz {
+        top: 1270px;
+    }
+
+    .observations .bg img.paris {
+        top: 970px;
+        left: -4%;
+    }
+
+    .observations .bg img.dunkerque {
+        top: 490px;
     }
 
     /* POST-IT */
@@ -699,18 +754,18 @@
     /* MP */
     .post-it.design {
         top: 0px;
-        right: -4%;
-        z-index: 1;
+        right: -2%;
+        z-index: 3;
     }
 
     .post-it.coaching {
-        top: 410px;
-        right: 11%;
+        top: 420px;
+        right: 14%;
     }
 
     .post-it.sociologie {
         top: 350px;
-        left: -2%;
+        left: 0%;
     }
 
     .post-it.politiques {
@@ -734,14 +789,14 @@
 
     .post-it.pedagogie {
         top: 390px;
-        left: -3%;
+        left: -2%;
     }
 
     /* A */
     .post-it.second {
         top: 180px;
         right: 2%;
-        z-index: 1;
+        z-index: 3;
     }
 
     .post-it.superieur {
@@ -779,8 +834,8 @@
 
     .post-it.mulhouse {
         top: 1130px;
-        right: 5%;
-        z-index: 1;
+        right: 10%;
+        z-index: 3;
     }
 
     .post-it.strasbourg {
@@ -789,7 +844,7 @@
 
     .post-it.paris {
         top: 1360px;
-        left: 1%;
+        left: 4%;
     }
 
     .post-it.dunkerque {
@@ -824,11 +879,12 @@
     }
 
     .post-it.impliquation {
-        top: 300px;
+        top: 380px;
     }
 
     .post-it.exception {
-        top: 890px;
+        top: 930px;
+        right: 0px;
     }
 
     /* / LINKS-BOX / */
@@ -868,39 +924,112 @@
     /* /// 7 MECANIQUES /// */
 
     /* / OBSERVATIONS / */
-    /* BACKBROUND-IMG */
-
+    /* IMG */
+    /* CE */
     .ce .observations .bg {
-        background-position: 0% 0%, 100% 70%;
         height: 1000px;
     }
 
+    /* MP */
     .mp .observations .bg {
-        background-position: -10% 3%, 105% 50%, 90% 100%, 10% 74%;
         height: 1400px;
     }
 
+    .observations .bg img.design {
+        top: 40px;
+    }
+
+    .observations .bg img.ethnographie {
+        top: 680px;
+    }
+
+    .observations .bg img.equipe {
+        top: 970px;
+    }
+
+    /* P */
     .p .observations .bg {
         height: 850px;
     }
 
+    .observations .bg img.rythmer {
+        top: 350px;
+        right: 7%;
+    }
+
+    /* A */
     .a .observations .bg {
-        background-position: 0% 0%, 120% 23%, 83% 44%, 5% 71%, 100% 100%;
         height: 1500px;
     }
 
+    .observations .bg img.embassadeurs {
+        top: 840px;
+    }
+
+    .observations .bg img.creation {
+        top: 1070px;
+    }
+
+    /* CC */
     .cc .observations .bg {
-        background-position: 0% 2%, 100% 21%, -7% 55%, 23% 38%, 100% 84%, 0% 98%;
         height: 2200px;
     }
 
+    .observations .bg img.volants {
+        top: 40px;
+    }
+
+    .observations .bg img.scolaire {
+        top: 720px;
+    }
+
+    .observations .bg img.megotiers {
+        top: 1040px;
+    }
+
+    .observations .bg img.bois {
+        top: 1500px;
+        right: 0%;
+    }
+
+    .observations .bg img.arbres {
+        top: 1730px;
+    }
+
+    /* E */
     .e .observations .bg {
-        background-position: 6% 0%, 130% 52%, 17% 100%;
         height: 1100px;
     }
 
+    .observations .bg img.lille {
+        top: 30px;
+    }
+
+    .observations .bg img.e-paris {
+        top: 720px;
+    }
+
+    .observations .bg img.mulhouse {
+        top: 340px;
+        right: -13%;
+    }
+
+    /* FL */
     .fl .observations .bg {
         height: 1400px;
+    }
+
+    .observations .bg img.paris {
+        top: 730px;
+        left: 4%;
+    }
+
+    .observations .bg img.dunkerque {
+        top: 360px;
+    }
+
+    .observations .bg img.metz {
+        top: 1040px;
     }
 
     /* POST-IT */
@@ -966,7 +1095,7 @@
     /* A */
     .post-it.second {
         top: 160px;
-        z-index: 1;
+        z-index: 3;
     }
 
     .post-it.superieur {
@@ -1013,7 +1142,7 @@
 
     /* E */
     .post-it.ecosysteme {
-        top: 30px;
+        top: 0px;
     }
 
     .post-it.acteurs {
@@ -1022,7 +1151,7 @@
 
     .post-it.grand-est {
         top: 500px;
-        left: 35%;
+        left: 33%;
     }
 
     .post-it.e-dunkerque {
