--- a/css/style.css
+++ b/css/style.css
@@ -1023,7 +1023,8 @@ section.show .tab-close {
 }
 
 .links-box.audio {
-    padding-bottom: 95px;
+    padding: 95px;
+    padding-top: 50px;
 }
 
 .links-box.video {
@@ -1058,9 +1059,12 @@ iframe {
 }
 
 audio {
-    width: 300px;
-    min-height: 40px;
-    max-height: 54px;
+    width: 420px;
+    max-width: 90%;
+    height: 60px;
+    background: #1C1B1B;
+    padding: 10px;
+    border-radius: 30px;
 }
 
 .links-box a,
