--- a/css/style.css
+++ b/css/style.css
@@ -1049,13 +1049,15 @@ section.show .tab-close {
     padding-bottom: 20px;
 }
 
+/* 
 .ytp-cued-thumbnail-overlay-image {
     -webkit-background-size: auto;
-}
+} */
 
 iframe {
     width: 100%;
     height: 330px;
+    border: 2px solid #1C1B1B;
 }
 
 audio {
