feat: about liste font

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -320,6 +320,10 @@
         min-width: 150px;
         max-width: 23%;
     }
+
+    .about .li {
+        font-size: 14px;
+    }
 }
 
 @media screen and (max-width: 759px) {
