feat: font-size mobil bugg

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -235,6 +235,11 @@
 }
 
 @media screen and (min-width: 600px) and (max-width: 759px) {
+
+    body {
+        font-size: 14px !important;
+    }
+
     .h1 {
         font-size: 56px;
     }
