--- a/css/responsive.css
+++ b/css/responsive.css
@@ -487,7 +487,7 @@
         text-align: left;
     }
 
-    /* BACKGROUND IMG */
+    /* IMG */
 
     .observations .bg {
         height: 100% !important;
@@ -592,7 +592,7 @@
     }
 
     /* / OBSERVATIONS / */
-    /* BACKGROUND_IMG */
+    /* IMG */
 
     .observations .bg img,
     .p .observations .bg img,
