--- a/css/style.css
+++ b/css/style.css
@@ -812,7 +812,7 @@ section.show .tab-close {
     visibility: hidden;
 }
 
-/* 1 - CADRE EXPERIMENTAL */
+/* CE */
 
 .post-it.contrat {
     top: 35px;
@@ -839,7 +839,7 @@ section.show .tab-close {
     left: -1%;
 }
 
-/* 2 - PLURIDISCIPLINAIRE */
+/* MP */
 
 .post-it.design {
     top: 30px;
@@ -866,7 +866,7 @@ section.show .tab-close {
     left: -1%;
 }
 
-/* 3 - RYTHMER */
+/* P */
 
 .post-it.travail {
     top: 40px;
@@ -883,7 +883,7 @@ section.show .tab-close {
     left: 2%;
 }
 
-/* 4 - LES AGENTS */
+/* A */
 
 .post-it.second {
     top: 160px;
@@ -915,7 +915,7 @@ section.show .tab-close {
     left: 24%;
 }
 
-/*  5 - CAS CONCRETS */
+/*  CC */
 
 .post-it.metz {
     top: 370px;
@@ -947,7 +947,7 @@ section.show .tab-close {
     right: 2%;
 }
 
-/* 6 - ECOSYSTEME */
+/* E */
 
 .post-it.ecosysteme {
     top: 50px;
@@ -969,7 +969,7 @@ section.show .tab-close {
     right: 11%;
 }
 
-/* 7 - FUTUR */
+/* FL */
 
 .post-it.iterations {
     top: 0px;
