--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,7 @@ section.show .tab-close {
 
 .label.sticky {
     top: 70px;
+    z-index: 1;
 }
 
 .header.sticky {
@@ -347,7 +348,7 @@ section.show .tab-close {
 
 .sticky+.tab-content {
     transition: all 0s;
-    padding-top: 96px;
+    padding-top: 100px;
 }
 
 /* //////// 7 MECANIQUES ///////// */
@@ -399,7 +400,6 @@ section.show .tab-close {
     text-transform: uppercase;
 }
 
-.legende,
 .subtitle,
 .post-it .strong,
 .enseignements ul strong,
@@ -527,11 +527,12 @@ section.show .tab-close {
 }
 
 .legende {
-    font-size: 26px;
     margin-bottom: 100px;
 }
 
 .legende li {
+    font-size: 26px;
+    font-style: italic;
     text-align: end;
     margin: 0;
 }
@@ -539,6 +540,10 @@ section.show .tab-close {
 .legende a {
     text-decoration: none;
     color: #1C1B1B;
+}
+
+.legende a:hover {
+    color: #FF6E29;
 }
 
 /*///// OBSERVATIONS /////*/
@@ -793,16 +798,20 @@ section.show .tab-close {
     padding-top: 0;
 }
 
-.post-it .links {
+.post-its p.links {
     text-align: center;
-    padding: 30px auto 0;
+    padding-top: 30px;
 }
 
 .post-its a {
     text-decoration: none;
-    font-weight: bold;
+    line-height: 24px;
     font-size: 18px;
     color: #FF6E29;
+}
+
+.post-its a:hover {
+    font-weight: bold;
 }
 
 .anchor {
@@ -1072,10 +1081,14 @@ audio {
     border-radius: 30px;
 }
 
-.links-box a,
-.links-box a:hover {
+.links-box a {
     text-decoration: none;
+    line-height: 24px;
     color: #FF6E29;
+}
+
+.links-box a:hover {
+    font-weight: bold;
 }
 
 :focus {
@@ -1126,12 +1139,13 @@ audio {
 }
 
 .intro a {
-    font-weight: bold;
+    line-height: 24px;
+    text-decoration: none;
     color: #FF6E29;
 }
 
-.intro a.contact {
-    text-decoration: none;
+.intro a:hover {
+    font-weight: bold;
 }
 
 /*///// ABOUT /////*/
@@ -1197,6 +1211,16 @@ section.illustrations {
 
 .about .links-box {
     margin-bottom: 70px;
+}
+
+.goToSection {
+    line-height: 24px;
+    color: #FF6E29;
+}
+
+.goToSection:hover {
+    font-weight: bold;
+    cursor: pointer;
 }
 
 /*///// CONTACT /////*/
