feat: change contact.html pour faq.html

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -573,7 +573,7 @@
     }
 
     .about .content,
-    .contact .content,
+    .faq .content,
     .cousins .content {
         padding-top: 0px;
     }
