--- a/css/responsive.css
+++ b/css/responsive.css
@@ -117,10 +117,6 @@
         background-size: 180px;
     }
 
-    #multidisciplinary .mini-img {
-        height: 300px;
-    }
-
     #programRhythm .mini-img,
     #involveAndForm .mini-img,
     #ecosysteme .mini-img {
@@ -128,6 +124,7 @@
     }
 
     #experimental .mini-img,
+    #multidisciplinary .mini-img,
     #concreteCase .mini-img,
     #project .mini-img {
         height: 300px;
@@ -138,7 +135,7 @@
     }
 
     #multidisciplinary .hypothese .bg {
-        background-size: 125%, 83%;
+        background-size: 122%, 80%;
     }
 
     #multidisciplinary .fig {
